[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-digit-recognizer"
version = "0.1.0"
description = "A PyTorch solution for the Kaggle Digit Recognizer competition."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "pandas",         # For reading the competition's .csv files
    "numpy",          # For numerical operations
    "scikit-learn",   # For utilities like train_test_split and metrics
    "notebook",       # For running Jupyter Notebook
    "matplotlib",     # For plotting images and results
    "seaborn",   
]